# shablon

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.tickets/: shab-19dd.md  shab-1a4f.md  shab-38f9.md  shab-6db2.md  shab-7389.md  shab-8f54.md  shab-a9b4.md  shab-bf64.md  shab-c0a7.md  shab-de64.md  shab-de9a.md  shab-e1d8.md  shab-e5e8.md  shab-e68b.md  shab-e74f.md
scripts/: bump-version.sh
skills/use-shablon/: SKILL.md
specs/changes/archive/2026-04-28-add-generate/: design.md  proposal.md  tasks.md
specs/changes/archive/2026-04-28-add-generate/deltas/cli/: spec.md
specs/changes/archive/2026-04-28-add-generate/deltas/config/: spec.md
specs/changes/archive/2026-04-28-add-generate/deltas/templates/: spec.md
specs/changes/archive/2026-04-28-add-generate/deltas/variables/: spec.md
specs/changes/archive/2026-04-28-add-init/: .change.json  design.md  proposal.md
specs/changes/archive/2026-04-29-add-version-flag/: .change.json  proposal.md
specs/changes/archive/2026-04-30-report-render-changes/: design.md  proposal.md
specs/reference/cli/: spec.md
specs/reference/config/: spec.md
specs/reference/templates/: spec.md
specs/reference/variables/: spec.md
src/shablon/: __init__.py  cli.py  config.py  discovery.py  errors.py  generate.py  init.py  render.py  variables.py
tests/: conftest.py  helpers.py  test_cli.py  test_config.py  test_discovery.py  test_generate.py  test_init.py  test_integration.py  test_render.py  test_variables.py
(+4 files in other folders)
